--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -21,14 +21,14 @@ header {
   .logo1 {
     width: 15%;
     position: absolute;
-    top: 14%;
+    top: -10%;
     left: 15%;
     transform: translate(-50%, -50%);
     box-shadow: 1px 3px 5px 5px rgb(245, 245, 56),
       inset 1px 3px 5px 5px rgb(245, 245, 56);
     border-radius: 50%;
     @include overTab {
-      top: 11%;
+      top: 2%;
       box-shadow: 1px 3px 15px 5px rgb(245, 245, 56),
         inset 1px 3px 15px 10px rgb(245, 245, 56);
       border-radius: 50%;
@@ -37,12 +37,12 @@ header {
   .logo2 {
     width: 55%;
     position: absolute;
-    top: 14%;
+    top: -10%;
     left: 55%;
     transform: translate(-50%, -50%);
     @include overTab {
       left: 55%;
-      top: 11%;
+      top: 2%;
     }
   }
   ul {
@@ -81,10 +81,12 @@ header {
       padding: 20px 20px;
       font-size: 16px;
       line-height: 1.5;
+      margin-top: 80px;
       @include overTab {
         font-size: 35px;
         padding: 40px 40px;
         padding-right: inherit;
+        margin-top: 100px;
       }
     }
     .profile {
@@ -105,16 +107,16 @@ header {
     }
     .profile2 {
       z-index: 5;
-      top: 40%;
-      width: 200px;
-      left: -5%;
+      top: -93%;
+      width: 260px;
+      left: 50%;
       transform: translate(-50%, -50%);
-      transform: rotate(-20deg);
+      // transform: rotate(-20deg);
       @include overTab {
-        top: 10%;
-        left: -36%;
-        height: 300px;
-        width: 480px;
+        top: -50%;
+        left: 50%;
+        height: 200px;
+        width: 400px;
       }
     }
   }
@@ -136,6 +138,7 @@ header {
     height: 0px;
     position: relative;
     margin-bottom: 100px;
+
     @include overTab {
       padding-bottom: 56.25%;
       margin-bottom: inherit;
@@ -143,7 +146,7 @@ header {
   }
   .video iframe {
     position: absolute;
-    top: 150%;
+    top: 155%;
     left: 50%;
     transform: translate(-50%, -50%);
     width: auto;
