--- a/scss/object/_area1-1.scss
+++ b/scss/object/_area1-1.scss
@@ -124,10 +124,10 @@
       position: absolute;
       margin-top: 80px;
       display: block;
-      width: 200px;
+      width: 160px;
       height: auto;
       z-index: 4;
-      top: 260%;
+      top: 275%;
       left: 60%;
       transform: translate(-50%, -50%);
       @include overTab {
@@ -139,7 +139,7 @@
     .kira1 {
       width: 120px;
       position: absolute;
-      top: 246%;
+      top: 256%;
       left: 50%;
       transform: translate(-50%, -50%);
       z-index: 5;
@@ -152,7 +152,7 @@
     .kira2 {
       width: 180px;
       position: absolute;
-      top: 248%;
+      top: 258%;
       left: 55%;
       transform: translate(-50%, -50%);
       z-index: 5;
@@ -165,7 +165,7 @@
     .kira3 {
       width: 140px;
       position: absolute;
-      top: 255%;
+      top: 265%;
       left: 65%;
       transform: translate(-50%, -50%);
       transform: rotate(90deg);
@@ -179,7 +179,7 @@
     .kira4 {
       width: 200px;
       position: absolute;
-      top: 20%;
+      top: 30%;
       left: 82%;
       transform: translate(-50%, -50%);
       transform: rotate(90deg);
@@ -192,14 +192,14 @@
     }
     .circle {
       position: absolute;
-      top: 295%;
+      top: 315%;
       left: 60%;
       transform: translate(-50%, -50%);
       background: white;
       border-radius: 50%;
       box-shadow: 0.375em 0.375em 0 0 rgb(247, 247, 125);
-      height: 7em;
-      width: 18em;
+      height: 5em;
+      width: 15em;
       @include overTab {
         height: 10em;
         width: 20em;
@@ -208,29 +208,29 @@
         transform: translate(-50%, -50%);
       }
     }
-    .wifi-text {
-      position: absolute;
-      width: 220px;
-      top: 310%;
-      left: 60%;
-      padding: 5px 0;
-      transform: translate(-50%, -50%);
-      z-index: 5;
-      background-color: rgb(228, 8, 8);
-      text-align: center;
-      font-size: 1.6rem;
-      font-style: italic;
-      letter-spacing: 0.1em;
-      color: #fff;
-      text-shadow: -3px 2px 0 #000;
-      @include overTab {
-        font-size: 1.8rem;
-        width: 220px;
-        top: 95%;
-        left: 85%;
-        transform: translate(-50%, -50%);
-      }
-    }
+    // .wifi-text {
+    //   position: absolute;
+    //   width: 220px;
+    //   top: 315%;
+    //   left: 60%;
+    //   padding: 5px 0;
+    //   transform: translate(-50%, -50%);
+    //   z-index: 5;
+    //   background-color: rgb(228, 8, 8);
+    //   text-align: center;
+    //   font-size: 1.6rem;
+    //   font-style: italic;
+    //   letter-spacing: 0.1em;
+    //   color: #fff;
+    //   text-shadow: -3px 2px 0 #000;
+    //   @include overTab {
+    //     font-size: 1.8rem;
+    //     width: 220px;
+    //     top: 95%;
+    //     left: 85%;
+    //     transform: translate(-50%, -50%);
+    //   }
+    // }
   }
   .area1-1-gbps1 {
     display: grid;
@@ -242,7 +242,7 @@
       width: 150px;
       height: auto;
       z-index: 4;
-      top: 205%;
+      top: 210%;
       left: 20%;
       transform: translate(-50%, -50%);
       @include overTab {
@@ -300,7 +300,7 @@
     }
     .circle {
       position: absolute;
-      top: 245%;
+      top: 255%;
       left: 38%;
       transform: translate(-50%, -50%);
       background: white;
@@ -319,7 +319,7 @@
     .gbps-text {
       position: absolute;
       width: 220px;
-      top: 260%;
+      top: 270%;
       left: 40%;
       padding: 5px 0;
       transform: translate(-50%, -50%);
@@ -332,8 +332,8 @@
       color: #fff;
       text-shadow: -3px 2px 0 #000;
       @include overTab {
-        font-size: 1.8rem;
-        width: 220px;
+        font-size: 2.0rem;
+        width: 240px;
         top: 58%;
         left: 66%;
         transform: translate(-50%, -50%);
@@ -441,12 +441,13 @@
   }
   .video iframe {
     position: absolute;
-    top: 50%;
+    top: 57%;
     left: 50%;
     transform: translate(-50%, -50%);
     width: auto;
     height: 200px;
     @include overTab {
+      top: 50%;
       width: 80%;
       height: 80%;
     }
