--- a/scss/object/_area1.scss
+++ b/scss/object/_area1.scss
@@ -72,8 +72,9 @@
     height: 15vh;
     display: flex;
     align-items: center;
-    padding: 70px 0;
+    padding: 50px 0;
     @include overTab {
+      padding: 70px 0;
       padding-left: 20px;
       width: 100%;
       height: 18vh;
@@ -84,8 +85,9 @@
     height: 15vh;
     display: flex;
     align-items: center;
-    padding: 40px 0;
+    padding: 20px 0;
     @include overTab {
+      padding: 50px 0;
       padding-left: 20px;
       width: 100%;
       height: 18vh;
@@ -124,10 +126,10 @@
     }
   }
   .area1-image3 {
-    width: 130px;
+    width: 110px;
     position: absolute;
-    top: -8%;
-    left: 65%;
+    top: 0%;
+    left: 68%;
     transform: rotate(10deg);
     box-shadow: 1px 3px 20px 10px rgb(247, 247, 125),
       inset 10px 3px 20px 10px rgb(247, 247, 125);
@@ -140,7 +142,7 @@
   .area1-image5 {
     width: 130px;
     position: absolute;
-    top: -15%;
+    top: -10%;
     left: 66%;
     filter: drop-shadow(0px 0px 20px rgb(250, 250, 59));
     @include overTab {
@@ -153,7 +155,7 @@
   .area1-image6 {
     width: 130px;
     position: absolute;
-    top: 45%;
+    top: 30%;
     left: 66%;
     filter: drop-shadow(0px 0px 20px rgb(250, 250, 59));
     @include overTab {
@@ -168,8 +170,9 @@
     height: 15vh;
     display: flex;
     align-items: center;
-    padding: 80px 0;
+    padding: 55px 0;
     @include overTab {
+      padding: 70px 0;
       padding-left: 20px;
       width: 100%;
       height: 18vh;
@@ -194,15 +197,16 @@
     height: 15vh;
     display: flex;
     align-items: center;
-    padding: 40px 0;
+    padding: 30px 0;
     @include overTab {
+      padding: 40px 0;
       padding-left: 20px;
       width: 100%;
       height: 18vh;
     }
   }
   .area1-image10 {
-    width: 120px;
+    width: 110px;
     position: absolute;
     left: 65%;
     transform: rotate(10deg);
@@ -210,8 +214,20 @@
     box-shadow: 1px 3px 20px 10px rgb(247, 247, 125),
       inset 10px 3px 20px 10px rgb(247, 247, 125);
     @include overTab {
-      width: 330px;
-      left: 65%;
+      width: 200px;
+      left: 63%;
+    }
+  }
+  .area1-image11{
+    box-shadow: none;
+    width: 150px;
+    top: 10%;
+    left:60%;
+    filter: drop-shadow(0px 0px 20px rgb(250, 250, 59));
+    @include overTab {
+      width: 300px;
+      top: -10%;
+      left:76%;
     }
   }
   .intro-text1 {
@@ -220,7 +236,7 @@
     text-align: left;
     width: auto;
     padding: 5px 0px;
-    font-size: 1.2rem;
+    font-size: 0.8rem;
     font-weight: bold;
     padding-top: 10px;
     position: relative;
@@ -232,7 +248,7 @@
     }
     .text1-title {
       color: #f3d53d;
-      font-size: 1.6rem;
+      font-size: 1.5rem;
       text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.342),
         -1px -1px 0 rgba(255, 255, 255, 0.342),
         -1px 1px 0 rgba(255, 255, 255, 0.342),
@@ -245,7 +261,7 @@
       }
     }
     .GB1 {
-      font-size: 1.2rem;
+      font-size: 1.0rem;
       color: #fff;
       text-shadow: 3px 3px 0 #000, -3px -3px 0 #000, -3px 3px 0 #000,
         3px -3px 0 #000, 0px 3px 0 #000, 0 -3px 0 #000, -3px 0 0 #000,
@@ -377,7 +393,7 @@
     }
     .customer1 {
       // width: 80px;
-      height: 40vh;
+      height: 25vh;
       @include overTab {
         height: 30vh;
         height: 250px;
@@ -555,10 +571,10 @@
     font-weight: bold;
     text-align: center;
     background: #e73508;
-    padding: 15px 0;
+    padding: 18px 0;
     margin: auto;
     width: 100%;
-    font-size: 20px;
+    font-size: 18px;
     border: 1px white solid;
     @include overTab {
       font-size: 26px;
@@ -585,7 +601,7 @@
     margin: auto;
     margin-bottom: 20px;
     width: 100%;
-    font-size: 17px;
+    font-size: 15px;
     border: 1px white solid;
     @include overTab {
       padding: 18px 0;
