--- a/css/style.css
+++ b/css/style.css
@@ -1664,39 +1664,42 @@ footer .follow-me li a[href*="tiktok"]::before {
   position: absolute;
   margin-top: 80px;
   display: block;
-  width: 150px;
+  width: 180px;
   height: auto;
   z-index: 4;
-  top: 210%;
-  left: 20%;
+  top: 225%;
+  left: 35%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
 }
 
 @media print, screen and (min-width: 768px) {
   #area1-1 .area1-1-gbps1 img {
-    width: 160px;
-    top: 0%;
-    left: 62%;
+    width: 240px;
+    top: 20%;
+    left: 68%;
   }
 }
 
 #area1-1 .area1-1-gbps1 .area1-1-gbps3 {
-  left: 52%;
+  top: 220%;
+  left: 70%;
+  width: 150px;
 }
 
 @media print, screen and (min-width: 768px) {
   #area1-1 .area1-1-gbps1 .area1-1-gbps3 {
-    top: 8%;
-    left: 72%;
+    width: 200px;
+    top: 15%;
+    left: 84%;
   }
 }
 
 #area1-1 .area1-1-gbps1 .kira1 {
   width: 120px;
   position: absolute;
-  top: 180%;
-  left: 20%;
+  top: 190%;
+  left: 25%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   z-index: 5;
@@ -1705,16 +1708,16 @@ footer .follow-me li a[href*="tiktok"]::before {
 @media print, screen and (min-width: 768px) {
   #area1-1 .area1-1-gbps1 .kira1 {
     width: 240px;
-    top: -25%;
-    left: 70%;
+    top: -20%;
+    left: 78%;
   }
 }
 
 #area1-1 .area1-1-gbps1 .kira2 {
   width: 180px;
   position: absolute;
-  top: 185%;
-  left: 55%;
+  top: 190%;
+  left: 58%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   z-index: 5;
@@ -1723,15 +1726,15 @@ footer .follow-me li a[href*="tiktok"]::before {
 @media print, screen and (min-width: 768px) {
   #area1-1 .area1-1-gbps1 .kira2 {
     width: 250px;
-    top: -25%;
-    left: 65%;
+    top: -20%;
+    left: 70%;
   }
 }
 
 #area1-1 .area1-1-gbps1 .kira3 {
   width: 200px;
   position: absolute;
-  top: 20%;
+  top: 180%;
   left: 82%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
@@ -1744,14 +1747,14 @@ footer .follow-me li a[href*="tiktok"]::before {
   #area1-1 .area1-1-gbps1 .kira3 {
     width: 200px;
     top: 5%;
-    left: 63%;
+    left: 82%;
   }
 }
 
 #area1-1 .area1-1-gbps1 .circle {
   position: absolute;
-  top: 255%;
-  left: 38%;
+  top: 265%;
+  left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   background: white;
@@ -1765,9 +1768,9 @@ footer .follow-me li a[href*="tiktok"]::before {
 @media print, screen and (min-width: 768px) {
   #area1-1 .area1-1-gbps1 .circle {
     height: 10em;
-    width: 20em;
-    top: 42%;
-    left: 67%;
+    width: 28em;
+    top: 65%;
+    left: 75%;
     -webkit-transform: translate(-50%, -50%);
             transform: translate(-50%, -50%);
   }
@@ -1776,8 +1779,8 @@ footer .follow-me li a[href*="tiktok"]::before {
 #area1-1 .area1-1-gbps1 .gbps-text {
   position: absolute;
   width: 220px;
-  top: 270%;
-  left: 40%;
+  top: 278%;
+  left: 50%;
   padding: 5px 0;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
@@ -1795,8 +1798,8 @@ footer .follow-me li a[href*="tiktok"]::before {
   #area1-1 .area1-1-gbps1 .gbps-text {
     font-size: 2.0rem;
     width: 240px;
-    top: 58%;
-    left: 66%;
+    top: 78%;
+    left: 76%;
     -webkit-transform: translate(-50%, -50%);
             transform: translate(-50%, -50%);
   }
@@ -1860,7 +1863,7 @@ footer .follow-me li a[href*="tiktok"]::before {
   border-radius: 30px;
   width: 85%;
   margin-left: 10px;
-  margin-bottom: 400px;
+  margin-bottom: 300px;
   background-color: rgba(255, 255, 255, 0.548);
 }
 
@@ -2566,7 +2569,7 @@ footer .follow-me li a[href*="tiktok"]::before {
 
 @media print, screen and (min-width: 768px) {
   #area2 .area2-wifi1 .area2-wifi3 {
-    width: 350px;
+    width: 370px;
     top: 30%;
     left: 88%;
   }
@@ -4182,8 +4185,8 @@ footer .follow-me li a[href*="tiktok"]::before {
 
 #area5 .area5-lower .japan-map {
   position: absolute;
-  width: 320px;
-  top: 38%;
+  width: 400px;
+  top: 32%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
@@ -4191,8 +4194,9 @@ footer .follow-me li a[href*="tiktok"]::before {
 
 @media print, screen and (min-width: 768px) {
   #area5 .area5-lower .japan-map {
+    top: 35%;
     left: 75%;
-    width: 500px;
+    width: 530px;
   }
 }
 
@@ -4200,10 +4204,11 @@ footer .follow-me li a[href*="tiktok"]::before {
 #area5 .area5-lower .sagawa2 {
   position: absolute;
   width: 130px;
-  top: 55%;
-  left: 75%;
+  top: 57%;
+  left: 40%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
+  z-index: 5;
 }
 
 @media print, screen and (min-width: 768px) {
@@ -4216,9 +4221,9 @@ footer .follow-me li a[href*="tiktok"]::before {
 
 #area5 .area5-lower .logo-delivery {
   position: absolute;
-  width: 40px;
-  top: 45%;
-  left: 54%;
+  width: 50px;
+  top: 41%;
+  left: 55%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
 }
@@ -4232,8 +4237,8 @@ footer .follow-me li a[href*="tiktok"]::before {
 }
 
 #area5 .area5-lower .sagawa2 {
-  width: 160px;
-  top: 44%;
+  width: 220px;
+  top: 54%;
   left: 80%;
 }
 
@@ -4241,7 +4246,7 @@ footer .follow-me li a[href*="tiktok"]::before {
   #area5 .area5-lower .sagawa2 {
     top: 54%;
     left: 15%;
-    width: 300px;
+    width: 380px;
   }
 }
 
@@ -4249,13 +4254,13 @@ footer .follow-me li a[href*="tiktok"]::before {
   position: absolute;
   padding: 5px 0;
   width: 250px;
-  top: 38%;
+  top: 45%;
   left: 55%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   z-index: 5;
   text-align: center;
-  font-size: 1.2rem;
+  font-size: 1.4rem;
   font-weight: bold;
   letter-spacing: 0.1em;
   color: #f54cbc;
