--- a/scss/object/_area1.scss
+++ b/scss/object/_area1.scss
@@ -393,7 +393,7 @@
     }
     .customer1 {
       // width: 80px;
-      height: 25vh;
+      height: 205px;
       @include overTab {
         height: 30vh;
         height: 250px;
